// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with a complete experiment, no conclusions, and in conclude mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-2"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Cancel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-2 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Save Conclusions
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a complete experiment, no conclusions, and in disable mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-5 makeStyles-marginLeft-6 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-6 MuiButton-containedPrimary Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            add_circle_outline
          </span>
        </span>
        Add Conclusions
      </span>
    </button>
  </div>
</div>
`;

exports[`with a complete experiment, no conclusions, and in view mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-17 makeStyles-marginLeft-18"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-18 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            add_circle_outline
          </span>
        </span>
        Add Conclusions
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a complete experiment, with conclusion, and in disable mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-7 makeStyles-marginLeft-8 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-8 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
    </button>
  </div>
</div>
`;

exports[`with a complete experiment, with conclusions, and in view mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-19 makeStyles-marginLeft-20"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-20"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a disabled experiment, no conclusions, and in conclude mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Cancel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-4 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Save Conclusions
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a disabled experiment, no conclusions, and in view mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-22 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            add_circle_outline
          </span>
        </span>
        Add Conclusions
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a disabled experiment, with conclusion, and in view mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-24"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a running experiment and in disable mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-9 makeStyles-marginLeft-10 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-10 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
    </button>
  </div>
</div>
`;

exports[`with a running experiment and in edit mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-14"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Cancel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-14 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Update Details
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a running experiment and in view mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-25 makeStyles-marginLeft-26"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-26"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a staging experiment and in disable mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-11 makeStyles-marginLeft-12 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-12 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
    </button>
  </div>
</div>
`;

exports[`with a staging experiment and in edit mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-16"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Cancel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-marginLeft-16 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Update Details
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`with a staging experiment and in view mode will render expected buttons 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-disableButton-27 makeStyles-marginLeft-28"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-marginLeft-28"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            edit
          </span>
        </span>
        Edit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
